Severin's test fixes. Thanks!